src/test/ui/issues/issue-25368.stderr
error[E0282]: type annotations needed for `(Sender<Foo<T>>, std::sync::mpsc::Receiver<Foo<T>>)`
  --> $DIR/issue-25368.rs:11:17
   |
LL |     let (tx, rx) = channel();
   |         -------- consider giving this pattern the explicit type `(Sender<Foo<T>>, std::sync::mpsc::Receiver<Foo<T>>)`, where the type parameter `T` is specified
...
LL |         tx.send(Foo{ foo: PhantomData });
   |                 ^^^ cannot infer type for type parameter `T` declared on the struct `Foo`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
